--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,3 +1,19 @@
+/*body {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
+}*/
+
+img {
+  width: 100%;
+  height: auto;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
