--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -19,3 +19,10 @@ img {
   justify-content: center;
   align-items: center;
 }
+
+.postion-center {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
