--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -9,9 +9,19 @@
   height: 100%;
 }*/
 
+body {
+  user-select: none;
+}
+
 img {
   width: 100%;
   height: auto;
+}
+
+input {
+  outline: none;
+  border: none;
+  padding: 0px;
 }
 
 .flex-center {
