修改axios封装，修改login组件，引入vuex4.0,封装localStorage，接入手机号登录接口

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -24,14 +24,25 @@ input {
   padding: 0px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.position-center {
+.fixed-center {
   position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.absolute-center {
+  position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
