--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -47,3 +47,19 @@ a {
   top: 50%;
   transform: translate(-50%, -50%);
 }
+
+.box-shadow {
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+@keyframes ani_loading {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
