--- a/src/assets/scss/var.scss
+++ b/src/assets/scss/var.scss
@@ -7,6 +7,7 @@ $color-bg-shallow: #fcfcfc;
 // 字体颜色
 $color-font-main: #323232;
 $color-font-gray: #a2a2a2;
+$color-font-deepgray: #676767;
 $color-font-white: #FFF;
 $color-font-black: #000;
 // 字体大小
