封装层叠卡片原生swiper组件

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -28,6 +28,15 @@ a {
   text-decoration: none;
 }
 
+ul,li {
+  padding: 0px;
+  margin: 0px;
+}
+
+li {
+  list-style: none;
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
