--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -105,6 +105,29 @@ li {
   box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+.v-anchor {
+  position: absolute;
+  z-index: 1000;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fcfcfc;
+  border: 1px solid #e8e8e8;
+  color: #e8e8e8;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  cursor: pointer;
+}
+.v-anchor .iconfont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.v-anchor:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 @keyframes ani_loading {
   0% {
     transform: rotate(0deg);
