--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -129,13 +129,17 @@ li {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-/*loading指令相关类样式*/
+/*scroll指令相关类样式*/
 .hide-scrollbar {
-　　scrollbar-width:none;/*Firefox*/
-　　-ms-overflow-style:none;/*IE10+*/
+　scrollbar-width:none;/*Firefox*/
+　-ms-overflow-style:none;/*IE10+*/
+  scrollbar-color: transparent transparent;
+  scrollbar-track-color: transparent;
+  -ms-scrollbar-track-color: transparent;
 }
 .hide-scrollbar::-webkit-scrollbar{
   display:none;/*ChromeSafari*/
+  width: 0!important;
 }
 .v-scroll__wrapper {
   width: 0px;
@@ -155,6 +159,22 @@ li {
 
 .v-scroll__inner:hover {
   background-color: #a2a2a2;
+}
+/*v-loading指令相关的类样式*/
+.v-loading {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0px;
+  top: 0px;
+}
+
+.v-loading .iconfont {
+  animation: ani_loading 1s linear infinite;
+  font-size: 20px;
 }
 
 @keyframes ani_loading {
