--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -37,6 +37,22 @@ li {
   list-style: none;
 }
 
+.text-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.textOVerTwo-ellipsis {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal !important;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical
+}
+
 .flex-center {
   display: flex;
   justify-content: center;
@@ -92,6 +108,61 @@ li {
 
 .flex-main-around {
   justify-content: space-around;
+}
+
+.mt5 {
+  margin-top: 5px;
+}
+.mr5 {
+  margin-right: 5px;
+}
+.ml5 {
+  margin-left: 5px;
+}
+.mb5 {
+  margin-bottom: 5px;
+}
+.mlr5 {
+  margin: 0px 5px;
+}
+.mtb5 {
+  margin: 5px 0px;
+}
+.mt10 {
+  margin-top: 10px;
+}
+.mr10 {
+  margin-right: 10px;
+}
+.ml10 {
+  margin-left: 10px;
+}
+.mb10 {
+  margin-bottom: 10px;
+}
+.mlr10 {
+  margin: 0px 10px;
+}
+.mtb10 {
+  margin: 10px 0px;
+}
+.mt20 {
+  margin-top: 20px;
+}
+.mr20 {
+  margin-right: 20px;
+}
+.ml20 {
+  margin-left: 20px;
+}
+.mb20 {
+  margin-bottom: 20px;
+}
+.mlr20 {
+  margin: 0px 20px;
+}
+.mtb20 {
+  margin: 20px 0px;
 }
 
 .absolute-center {
