--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,14 +1,3 @@
-/*body {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-
-#app {
-  width: 100%;
-  height: 100%;
-}*/
-
 body {
   user-select: none;
 }
@@ -51,6 +40,10 @@ li {
   word-wrap: break-word;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .flex-center {
@@ -176,6 +169,11 @@ li {
   box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+.active-hover:hover {
+  color: #c77f0e;
+  cursor: pointer;
+}
+
 /*锚点指令相关类样式*/
 .v-anchor {
   position: absolute;
@@ -239,6 +237,8 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #FFF;
+  z-index: 10000000000000;
   left: 0px;
   top: 0px;
 }
