--- a/src/assets/css/iconfont.css
+++ b/src/assets/css/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2413754 */
-  src: url('//at.alicdn.com/t/font_2413754_ciblrw479qq.woff2?t=1619772095421') format('woff2'),
-       url('//at.alicdn.com/t/font_2413754_ciblrw479qq.woff?t=1619772095421') format('woff'),
-       url('//at.alicdn.com/t/font_2413754_ciblrw479qq.ttf?t=1619772095421') format('truetype');
+  src: url('//at.alicdn.com/t/font_2413754_omcu5pbf4x.woff2?t=1623310905370') format('woff2'),
+       url('//at.alicdn.com/t/font_2413754_omcu5pbf4x.woff?t=1623310905370') format('woff'),
+       url('//at.alicdn.com/t/font_2413754_omcu5pbf4x.ttf?t=1623310905370') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconjingyin:before {
+  content: "\e61f";
 }
 
 .iconVIP:before {
